--- a/themes/polymathic/package.json
+++ b/themes/polymathic/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "sass": "^1.77.8"
   }
 }
