--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,34 @@
 # On every push this script is executed
 on: push
+
 name: Build and deploy GH Pages
+
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: checkout
+      # Step 1: Checkout the repository
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: build_and_deploy
+
+      # Step 2: Set up Node.js (to install dependencies like Bulma)
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Specify the Node.js version to match your local environment
+
+      # Step 3: Install necessary npm packages (like Bulma)
+      - name: Install dependencies
+        run: |
+          npm install bulma
+
+      # Step 4: Build and deploy using Zola
+      - name: Build and deploy
         uses: shalzz/zola-deploy-action@v0.19.1
         env:
           # Target branch
           PAGES_BRANCH: gh-pages
           BUILD_DIR: .
-          # Provide personal access token
+          # Provide personal access token (use GITHUB_TOKEN for the same repo)
           TOKEN: ${{ secrets.TOKEN }}
-          # Or if publishing to the same repo, use the automatic token
-          #TOKEN: ${{ secrets.GITHUB_TOKEN }}
