--- a/themes/polymathic/netlify.toml
+++ b/themes/polymathic/netlify.toml
@@ -2,7 +2,7 @@
 # This assumes that the Zola site is in a docs folder. If it isn't, you don't need
 # to have a `base` variable but you do need the `publish` and `command` variables.
 publish = "public"
-command = "pnpm --prefix themes/polymathic install && zola build"
+command = "npm --prefix themes/polymathic install && zola build"
 
 [build.environment]
 # Set the version name that you want to use and Netlify will automatically use it.
@@ -14,4 +14,4 @@ ZOLA_VERSION = "0.17.2"
 # `$DEPLOY_PRIME_URL`.
 
 [context.deploy-preview]
-command = "pnpm --prefix themes/polymathic install && zola build --base-url $DEPLOY_PRIME_URL"
+command = "npm --prefix themes/polymathic install && zola build --base-url $DEPLOY_PRIME_URL"
