--- a/config.toml
+++ b/config.toml
@@ -13,5 +13,9 @@ build_search_index = true
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+[extra.poly]
+    menu_order = [
+        "posts/_index.md",
+    ]
 [extra]
 # Put all your custom variables here
